package com.esiea.monstre.pochebis.models.entites;

import java.io.Serializable;

import com.esiea.monstre.pochebis.models.affinites.Type;

public class Attaque implements Serializable {
    protected static final long serialVersionUID = 1L;
    private String nomAttaque;
    private int nbUtilisations;
    private int puissanceAttaque;
    private double probabiliteEchec;
    private Type typeAttaque;

    public Attaque(String nomAttaque, int nbUtilisations, int puissanceAttaque, double probabiliteEchec, Type typeAttaque) {
        this.nomAttaque = nomAttaque;
        this.nbUtilisations = nbUtilisations;
        this.puissanceAttaque = puissanceAttaque;
        this.probabiliteEchec = probabiliteEchec;
        this.typeAttaque = typeAttaque;
    }

    public String getNomAttaque() {
        return this.nomAttaque;
    }

    public int getNbUtilisations() {
        return this.nbUtilisations;
    }

    public int getPuissanceAttaque() {
        return this.puissanceAttaque;
    }

    public double getProbabiliteEchec() {
        return this.probabiliteEchec;
    }

    public Type getTypeAttaque() {
        return this.typeAttaque;
    }

    public void setNomAttaque(String nomAttaque) {
        this.nomAttaque = nomAttaque;
    }

    public void setNbUtilisations(int nbUtilisations) {
        this.nbUtilisations = nbUtilisations;
    }

    public void setPuissanceAttaque(int puissanceAttaque) {
        this.puissanceAttaque = puissanceAttaque;
    }

    public void setProbabiliteEchec(double probabiliteEchec) {
        this.probabiliteEchec = probabiliteEchec;
    }

    public void setTypeAttaque(Type typeAttaque) {
        this.typeAttaque = typeAttaque;
    }

    public double calculeDegatsAttaque(Monstre monstreAttaquant, Monstre cible) {
        int numerateur = 11 * monstreAttaquant.getAttaque() * this.getPuissanceAttaque();
        int denominateur = 25 * cible.getDefense();
        double coeff = 0.85 + (1.0 - 0.85) * Math.random();
        double avantage = 1;
        if (this.getTypeAttaque().estFaibleContre().equals(cible.getTypeMonstre().getLabelType())) {
            avantage = 0.5;
        } else if (this.getTypeAttaque().estFortContre().equals(cible.getTypeMonstre().getLabelType())) {
            avantage = 2;
        }
        return ((numerateur/denominateur) + 2) * avantage * coeff;
    }

    @Override
    public String toString() {
        return "Attaque (" +
                "nomAttaque='" + nomAttaque + '\'' +
                ", nbUtilisations=" + nbUtilisations +
                ", puissanceAttaque=" + puissanceAttaque +
                ')';
    }
}
