@startuml ModelsCore

title Diagramme de Classes - Models Core

class Monstre {
    -nomMonstre : String
    -pointsDeVieMax : double
    -pointsDeVie : double
    -attaque : int
    -defense : int
    -vitesse : int
    -rateAttaque : boolean

    +Monstre(String, double, int, int, int, ArrayList<Attaque>, Type)
    +getNomMonstre() : String
    +getPointsDeVie() : double
    +getAttaque() : int
    +getDefense() : int
    +getVitesse() : int
    +setPointsDeVie(double) : void
    +setAttaque(int) : void
    +ajouterAttaque(Attaque) : void
    +attaquer(Monstre, Terrain, Attaque) : void
    +calculeDegat(Monstre, Monstre) : double
}

class Joueur {
    -nomJoueur : String
    -monstreActuel : Monstre

    +{static} TAILLE_EQUIPE_MAX : int = 3
    +{static} NOMBRE_ATTAQUES_PAR_MONSTRE : int = 4
    +{static} TAILLE_INVENTAIRE_MAX : int = 5

    +Joueur(String)
    +getNomJoueur() : String
    +getMonstres() : ArrayList<Monstre>
    +getMonstreActuel() : Monstre
    +setMonstreActuel(Monstre) : void
    +ajouterMonstre(Monstre) : void
    +sontMonstresMorts() : boolean
}

class Attaque {
    -nomAttaque : String
    -nbUtilisations : int
    -puissanceAttaque : int
    -probabiliteEchec : double

    +Attaque(String, int, int, double, Type)
    +getNomAttaque() : String
    +getNbUtilisations() : int
    +getPuissanceAttaque() : int
    +setNbUtilisations(int) : void
    +calculeDegatsAttaque(Monstre, Monstre) : double
}

class Terrain {
    -nomTerrain : String

    +Terrain(String, StatutTerrain)
    +getNomTerrain() : String
    +setStatutTerrain(StatutTerrain) : void
    +getStatutTerrain() : StatutTerrain
}

abstract class Type {
    #labelType : String
    #faibleContre : String
    #fortContre : String

    +getLabelType() : String
    +estFortContre() : String
    +estFaibleContre() : String
}

abstract class StatutMonstre {
    #labelStatut : String
    #nbToursEffet : int

    +getLabelStatut() : String
}

abstract class StatutTerrain {
    #labelStatut : String
    #nbToursEffet : int

    +getLabelStatut() : String
}

abstract class Objet {
    #nomObjet : String

    +getNomObjet() : String
    +{abstract} utiliserObjet(Monstre) : void
}

' Relations
Joueur "1" --> "0..3" Monstre : -monstres
Joueur "1" --> "1" Monstre : -monstreActuel
Joueur "1" --> "0..5" Objet : -objets
Monstre "1" --> "0..4" Attaque : -attaques
Monstre "1" --> "1" Type : -typeMonstre
Monstre "1" --> "1" StatutMonstre : -statut
Attaque "1" --> "1" Type : -typeAttaque
Terrain "1" --> "1" StatutTerrain : -statutTerrain

@enduml
